Fixing link contrast...

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ nav a.current{
   font-style: italic;
   text-transform: uppercase;
 }
+nav a:visited{
+  color: #4e1774;
+}
 figure{
   display: inline-block;
   width: 92%;
